--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "sass": "^1.89.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
