--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@supabase/supabase-js": "^2.49.4",
-    "nanoid": "^5.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
-    "sass": "^1.89.2",
-    "uuid": "^11.1.0"
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
